add past changelog

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,20 @@
 tepco_watch
 
-v0.7.0:
-- Chrome extension manifest version2 に対応
-- jqPlot を version 1.0.4 に更新
+v0.7.0: YYYY/MM/DD
+- Chrome extension manifest version2 に対応しました。
+- jqPlot を version 1.0.4 に更新しました。
+
+v0.6.1: 2011/07/04
+- 使用率予報が正しく表示できないことがある不具合を修正しました。
+- 東京電力による使用率予報が提供されている場合は、Yahoo! による予報より優先して表示するようにしました。
+- バッジアイコン上での電力使用率の表示方法を変更しました。
+
+v0.6.0: 2011/07/01
+- 一番上に表示される電力使用量に、5分ごとに更新される速報値を使うようにしました。
+- 計画停電情報APIを利用して、計画停電が予定されているか表示するようにしました。
+
+v0.5.2: 2011/05/22
+- オプション画面の数値入力ボックスに min/max 属性を設定しました。
+
+v0.5.3: 2011/06/21
+- proxy内部からtwitterにアクセスできないことがあり、アクセス方法を変更しました。
